--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -21,18 +21,6 @@
     //margin-right: 40px;
 }
 
-.cell-note .img-wrap {
-    border: 1px solid @Class-Material;
-}
-
-.cell-flashcard .img-wrap {
-    border: 1px solid @Flashcards;
-}
-
-.cell-ask .img-wrap {
-    border: 1px solid @Ask-a-Question
-}
-
 .right-section {
     min-width: 0; // elipsis casus issue this is the solution
     margin-left: 2px;
@@ -76,4 +64,5 @@ p {
 
 .img-wrap {
     .flexSameSize();
+    box-shadow: 0 0 1px black;
 }
