--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -5,15 +5,19 @@
     width: 100vw;
     height: 100vh;
     position:fixed;
-    background-color:rgba(255, 255, 255,.8);
     z-index:3;
 }
-.loading{
-    main.content{
-        padding-top: 0!important;
+.loading {
+    main.content {
+        padding-top: 0 !important;
     }
-    .p-result{
+
+    .p-result {
         opacity: 0;
+    }
+
+    .progress-circular {
+        color: #302eb5;
     }
 }
 .flex-fix {
