--- a/Cloudents.Web/ClientApp/components/results/studyblueCard.less
+++ b/Cloudents.Web/ClientApp/components/results/studyblueCard.less
@@ -3,17 +3,21 @@
 
 
 .studyblue {
+    display: flex;
+    align-items: center;
     padding: 16px;
-    outline: none;
     .responsive-property(min-height, 160px, null, 120px);
 
     .cell-text {
         text-align: left;
         margin-left: 16px;
+        color: @color-grey;
+        font-size: 16px;
+        letter-spacing: -0.3px;
     }
 
     img {
-        width: 72px;
-        height: 72px;
+        .responsive-property(width, 72px, null, 64px);
+        .responsive-property(height, 72px, null, 64px);
     }
 }
