--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -125,7 +125,8 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-M2BGS2G');</script>
     <!-- End Google Tag Manager -->
-    <script async type="text/javascript" id="inspectletjs">
+    <!-- Begin Inspectlet Embed Code -->
+    <script type="text/javascript" id="inspectletjs">
         (function () {
             window.__insp = window.__insp || [];
             __insp.push(['wid', 348650174]);
@@ -133,6 +134,7 @@
             setTimeout(ldinsp, 0);
         })();
     </script>
+    <!-- End Inspectlet Embed Code -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         window.version = '@version';
