--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <meta name="title" content="@ViewBag.title" />
     <meta name="description" content="@ViewBag.metaDescription" />
 
-    <meta name="apple-itunes-app" content="app-id=990911114">
+    @*<meta name="apple-itunes-app" content="app-id=990911114">*@
     <link rel="image_src" href="@ViewBag.imageSrc" />
 
     <meta property="fb:app_id" content="450314258355338" />
