--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -89,7 +89,6 @@
     }
 
     .chip__content {
-        cursor: pointer;
         padding: 0 4px 0 8px;
         letter-spacing: -0.8px;
         min-width: 102px;
@@ -107,7 +106,9 @@
     //letter-spacing: -0.2px;
     //color: #4a4a4a;
     i {
-        margin: 0 4px 0 16px;
+        cursor: pointer;
+        padding: 4px;
+        margin: 0 0 0 12px;
         font-size: 10px;
         color: #bbb;
     }
