--- a/Cloudents.Web/ClientApp/components/book/header.less
+++ b/Cloudents.Web/ClientApp/components/book/header.less
@@ -1,50 +1,26 @@
 ﻿@import "../../mixin.less";
 
+
+
 .book-header {
+
     @media(max-width: @screen-xs) {
-        .tabs__item {
-            color: red;
+        .toolbar-title {
+            color: @color-purple;
         }
 
-        .toolbar {
-            background-color: white;
+        .tabs {
+            li {
+                font-size: 16px;
+                font-weight: 600;
 
-            .toolbar__title {
-                font-size: 18px;
-                margin-left: 2px;
-            }
-
-            .back.btn {
-                &:first-child {
-                    @media(max-width: @screen-xs) {
-                        margin-left: 0;
-                    }
-                }
-
-                .btn__content {
-
-                    .icon {
-                        transform: rotate(90deg);
-                        font-size: 38px;
-                        color: #9b9b9b;
-                    }
+                &:not(.tabs__item--active) {
+                    color: #cea1ec;
                 }
             }
 
-            .tabs {
-
-                li {
-                    font-size: 16px;
-                    font-weight: 600;
-
-                    &:not(.tabs__item--active) {
-                        color: #cea1ec;
-                    }
-                }
-
-                .tabs__slider {
-                    height: 4px;
-                }
+            .tabs__slider {
+                height: 4px;
             }
         }
     }
