Added skeleton to results (case 9278)

--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -13,11 +13,7 @@
 }
 
 .loading {
-    main.content {
-        padding-top: 0 !important;
-    }
-
-    .p-result {
+    .left-side-bar, .side-bar{
         opacity: 0;
     }
 }
