--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -1,9 +1,5 @@
 ﻿@import "../../mixin.less";
 
-@iconWidth: 70px;
-@logoWidth: 215px;
-
-
 .header {
     //background-image: linear-gradient(276deg, @Spitball-Main-color, #3023ae);
     &.toolbar {
@@ -41,20 +37,6 @@
         }
     }
 
-    .gap {
-        width: @logoWidth;
-        .flexSameSize();
-    }
-
-    .tabs__item {
-        text-transform: capitalize;
-        padding: 0 !important;
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: -0.2px;
-        opacity: 1;
-    }
-
     .toolbar__content > *:not(.btn):not(.menu):last-child,
     .toolbar__content > *:not(.btn):not(.menu):first-child {
         @media(max-width: 599px) {
@@ -62,13 +44,22 @@
         }
     }
 
-    .line {
-        @media(max-width: 959px) {
-            margin-left: 8px;
-            margin-right: 0;
+    .main {
+        .responsive-property(height,60px, 96px, null );
+        .responsive-property(padding-top,12px, 4px, null );
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 
+    .line {
+        .responsive-property(margin-right, 16px, null, 0);
+        .responsive-property(margin-left, 16px, 24px, 8px);
+        max-height: 60px;
+
+        @media(max-width: 959px) {
             &:nth-child(2) {
-                align-items: center;
+                //align-items: center; /*TODO: irena Check if needed...*/
             }
 
             form {
@@ -88,11 +79,14 @@
             }
         }
 
+        &.search-wrapper {
+            align-items: flex-end;
+        }
+
         flex: 1;
         //.inTheMiddle();
         display: flex;
         justify-content: center;
-        align-items: flex-end;
         /*> * {
             height:100%;
         }*/
@@ -131,7 +125,7 @@
         }
 
         .input-group__input {
-            padding:0 8px 0 12px;
+            padding: 0 8px 0 12px;
 
             input {
                 letter-spacing: -0.4px;
@@ -144,24 +138,8 @@
             color: #3293f6;
         }
     }
-
-    .verticals-bar {
-        padding-left: 10px;
-
-        @media(max-width: 959px) {
-            padding-left: 0;
-        }
-
-        .tabs__bar {
-            height: 60px;
-
-            .tabs__slider {
-                height: 3px;
-            }
-        }
-    }
 }
 
-.settings-list .list__tile__title{
+.settings-list .list__tile__title {
     text-transform: capitalize;
 }
