--- a/Cloudents.Web/ClientApp/components/preview/headerDocument.less
+++ b/Cloudents.Web/ClientApp/components/preview/headerDocument.less
@@ -1,56 +1,56 @@
 ﻿@import "../../mixin.less";
 
 
-.header-elements {
-    width: 100%;
+.item-header {
+    background-color: @Site-Background;
+    position: sticky;
+    .responsive-property(top, @mainNavHeightSmAndUp,null,@mainNavHeightXsOnly);
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
 
-    .item-toolbar.toolbar {
-        background-color: @Site-Background;
-        position: sticky;
-        .responsive-property(top, @mainNavHeightSmAndUp,null,@mainNavHeightXsOnly);
+    .item-header-content {
+        .item-page-width();
 
-        .toolbar-content {
-            .item-page-width();
+        .item-name {
+            .responsive-property(font-size, 24px, null, 18px);
+            font-weight: 600;
+            line-height: 1.21;
+            letter-spacing: -0.5px;
+            text-align: left;
+            color: #5d5d5d;
+            .giveMeEllipsisOne;
+        }
 
-            .item-name {
-                .responsive-property(font-size, 24px, null, 18px);
-                font-weight: 600;
-                line-height: 1.21;
-                letter-spacing: -0.5px;
-                text-align: left;
+        .actions {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-shrink: 0;
+
+            .tooltip {
+                span, a, .menu__activator {
+                    display: flex;
+                }
+            }
+        }
+
+        .item-meta {
+            .author {
+                .responsive-property(font-size, 16px, null, 12px);
+                letter-spacing: -0.4px;
+                color: @color-dark-blue;
+            }
+
+            .date {
+                .responsive-property(font-size, 16px, null, 12px);
+                letter-spacing: -0.4px;
                 color: #5d5d5d;
-                .giveMeEllipsisOne;
-            }
-
-            .actions {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-shrink: 0;
-
-                .tooltip {
-                    span, a, .menu__activator {
-                        display: flex;
-                    }
-                }
-            }
-
-            .item-meta {
-                .author {
-                    .responsive-property(font-size, 16px, null, 12px);
-                    letter-spacing: -0.4px;
-                    color: @color-dark-blue;
-                }
-
-                .date {
-                    .responsive-property(font-size, 16px, null, 12px);
-                    letter-spacing: -0.4px;
-                    color: #5d5d5d;
-                }
             }
         }
     }
 }
+
 
 .actions-list {
     padding: 0;
