--- a/Cloudents.Web/ClientApp/components/book/bookCell.less
+++ b/Cloudents.Web/ClientApp/components/book/bookCell.less
@@ -35,7 +35,7 @@
     .cell-title {
         color: @Textbooks;
         margin-bottom: 6px;
-        .giveMeEllipsis(3,19px);
+        .giveMeEllipsis(2,19px);
     }
 
     .book-info {
@@ -51,5 +51,6 @@
 
     .img-wrap {
         .flexSameSize();
+        box-shadow: 0px 0px 1px @color-grey;
     }
 }
