--- a/Cloudents.Web/ClientApp/components/results/suggestCard.less
+++ b/Cloudents.Web/ClientApp/components/results/suggestCard.less
@@ -33,6 +33,7 @@
             display: flex;
             align-items: center;
             padding: 0 8px 3px 8px;
+            flex-grow: 0;
 
             svg {
                 width: 72px;
