--- a/Cloudents.Web/ClientApp/components/satellite/term.less
+++ b/Cloudents.Web/ClientApp/components/satellite/term.less
@@ -5,8 +5,6 @@
     margin-top: 30px;
     width: ~"calc(100% - 16px)";
     max-width: 780px;
-    line-height: 1.67;
-    letter-spacing: -0.2px;
 
     h2 {
         .responsive-property(font-size, 24px, null, 18px);
@@ -14,6 +12,30 @@
         line-height: 32px;
         letter-spacing: -0.2px;
         font-weight: normal;
+        margin-bottom: 32px;
+        margin-top: 26px;
     }
 
+    p, li, center {
+        font-size: 18px;
+        line-height: 1.67;
+        letter-spacing: -0.2px;
+        color: @color-grey;
+    }
+
+    p {
+        margin-bottom: 30px;
+    }
+
+    ul, ol {
+        padding-left: 20px;
+
+        li {
+            margin: 12px 0;
+        }
+    }
+
+    ul {
+        list-style-type: disc;
+    }
 }
