--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -26,8 +26,7 @@
     <title>@ViewBag.title</title>
 
     <meta name="mobile-web-app-capable" content="yes" />
-    @*<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />*@
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <base href="~/" />
     @*<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
 
