--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -35,6 +35,10 @@
                 width: 114px;
             }
         }
+
+        svg path {
+            fill: #3532D5;
+        }
     }
 
     .toolbar__content > *:not(.btn):not(.menu):last-child,
