--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -81,3 +81,39 @@
         }
     }
 }
+
+
+.loading-skeleton {
+
+    .cell-title, .rate-num, .address, .bottom {
+        background: @Site-Background;
+        color: transparent !important;
+    }
+
+    .img-wrap {
+        background: @Site-Background !important;
+        border: none;
+
+        svg {
+            display: none;
+        }
+    }
+
+    .cell-title {
+        font-size: 12px;
+        line-height: 0;
+    }
+
+    .rate-num, .address, .bottom {
+        font-size: 7px !important;
+        line-height: 7px;
+    }
+
+    .vue-star-rating {
+        display: none !important;
+    }
+
+    .bottom {
+        display: none;
+    }
+}
