--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -64,6 +64,7 @@
 
     .logo {
         margin-right: 10px;
+        fill: #3532D5;
 
         @media(max-width: @screen-sm) {
             width:114px;
