small fixes in skeleton

--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -12,6 +12,8 @@
         font-weight: 600;
         letter-spacing: -0.4px;
         color: @Food;
+        display: block;
+        .giveMeEllipsisOne();
     }
 
     .rate {
@@ -102,6 +104,7 @@
     .cell-title {
         font-size: 12px;
         line-height: 0;
+        display: inline;
     }
 
     .rate-num, .address, .bottom {
