--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -82,6 +82,10 @@
     .result-cell {
         pointer-events: none;
 
+        .result-cell-content {
+            overflow: hidden;
+        }
+
         ::-moz-selection {
             color: transparent;
         }
