--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -8,6 +8,7 @@
     letter-spacing: -0.3px;
     .giveMeEllipsisOne();
     max-width: ~"calc(100% - 5px)";
+    display: block;
 
     &.text-note {
         color: @color-dark-purple;
@@ -91,6 +92,7 @@
     .cell-title {
         font-size: 12px;
         line-height: 0;
+        display: inline;
     }
 
     .snippet {
