--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -74,7 +74,7 @@
         .flexSameSize();
         border-radius: 4px;
         overflow: hidden;
-        border: 1px solid #2cbfa5;
+        box-shadow: 0 0 1px black;
     }
 
     @media(max-width: @screen-xs) {
