--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -81,6 +81,24 @@
     <meta name="msapplication-TileImage" content="@cdnEndPoint/images/favicons/mstile-144x144.png">
     <link rel="SHORTCUT ICON" href="@cdnEndPoint/favicon.ico" />
     @Html.Raw(JavaScriptSnippet.FullScript)
+    
+    <style>.async-hide { opacity: 0 !important} </style>
+    <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+})(window,document.documentElement,'async-hide','dataLayer',4000,
+{'GTM-NN2LHCV':true});</script>
+    <!-- Modified Analytics tracking code with Optimize plugin -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-100723645-2', 'auto');
+    ga('require', 'GTM-NN2LHCV');
+    ga('send', 'pageview');
+    </script>
 </head>
 <body>
     <div>
