--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -95,6 +95,7 @@
     .img-wrap {
         background: @Site-Background !important;
         border: none;
+        box-shadow: none;
 
         svg {
             display: none;
