--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -25,8 +25,11 @@
         //.inTheMiddle();
         display: flex;
         align-items: center;
-        width: @logoWidth;
         padding-left: 16px;
+
+        @media(min-width: (@screen-sm + 1)) {
+            width: @logoWidth;
+        }
 
         @media(max-width: 959px) {
             padding-left: 0;
