--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -41,7 +41,6 @@
     margin-bottom: 8px;
 
     .snippet {
-        //.giveMeEllipsis(3,1.29);
         font-size: 14px;
         color: #000;
         height: 72px;
@@ -49,6 +48,10 @@
         line-height: 1.29;
         letter-spacing: -0.3px;
         overflow: hidden;
+
+        @media(max-width: @screen-xs) {
+            .giveMeEllipsis(4,1.29);
+        }
     }
 }
 
